finish before midterm

--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -31,7 +31,8 @@
     "from sklearn.metrics.pairwise import linear_kernel\n",
     "import translators as ts\n",
     "import pickle\n",
-    "import sys"
+    "import sys\n",
+    "import numpy as np"
    ]
   },
   {
@@ -44,13 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "c3fb4e1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Receive the user name from app.py\n",
-    "user_input = sys.argv[1]\n",
+    "user_input = 'James Hill'\n",
     "\n",
     "# Get filename from pickle\n",
     "with open('./pickle/filename.pickle', 'rb') as f:\n",
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "d3da61f397b9ca5d",
    "metadata": {
     "ExecuteTime": {
@@ -86,7 +87,7 @@
    },
    "outputs": [],
    "source": [
-    "file_name = './uploads/' + filename\n",
+    "file_name = './uploads/Sample Dataset.xlsx'\n",
     "file = pd.read_excel(file_name)"
    ]
   },
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "c368d2c6cb469623",
    "metadata": {
     "ExecuteTime": {
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "e4dc26afbc54f2c0",
    "metadata": {
     "ExecuteTime": {
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "b3f21aedd43e6caf",
    "metadata": {
     "ExecuteTime": {
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "349242dd",
    "metadata": {},
    "outputs": [],
@@ -235,22 +236,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "cb5cd99f50462dca",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-12-21T09:48:55.526537500Z",
-     "start_time": "2023-12-21T09:48:55.510531700Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
+   "execution_count": 97,
+   "id": "ea5994b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    Basic Computer Programming for ISNE\n",
+      "1                             Calculus 1\n",
+      "2         Data Structures and Algorithms\n",
+      "3                    Engineering Drawing\n",
+      "4                  Fundamental English 1\n",
+      "5                   Introduction to ISNE\n",
+      "Name: course, dtype: object\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "vectorizer = TfidfVectorizer(stop_words='english')\n",
-    "tfidf_matrix = vectorizer.fit_transform(courses_clean)"
+    "print(courses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "cfc29bd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "idf values:\n",
+      "algorithms : 2.252762968495368\n",
+      "and : 2.252762968495368\n",
+      "basic : 2.252762968495368\n",
+      "calculus : 2.252762968495368\n",
+      "computer : 2.252762968495368\n",
+      "data : 2.252762968495368\n",
+      "drawing : 2.252762968495368\n",
+      "engineering : 2.252762968495368\n",
+      "english : 2.252762968495368\n",
+      "for : 2.252762968495368\n",
+      "fundamental : 2.252762968495368\n",
+      "introduction : 2.252762968495368\n",
+      "isne : 1.8472978603872037\n",
+      "programming : 2.252762968495368\n",
+      "structures : 2.252762968495368\n",
+      "to : 2.252762968495368\n",
+      "\n",
+      "Word indexes:\n",
+      "{'basic': 2, 'computer': 4, 'programming': 13, 'for': 9, 'isne': 12, 'calculus': 3, 'data': 5, 'structures': 14, 'and': 1, 'algorithms': 0, 'engineering': 7, 'drawing': 6, 'fundamental': 10, 'english': 8, 'introduction': 11, 'to': 15}\n",
+      "\n",
+      "tf-idf value:\n",
+      "  (0, 12)\t0.37935894668725584\n",
+      "  (0, 9)\t0.4626247911559474\n",
+      "  (0, 13)\t0.4626247911559474\n",
+      "  (0, 4)\t0.4626247911559474\n",
+      "  (0, 2)\t0.4626247911559474\n",
+      "  (1, 3)\t1.0\n",
+      "  (2, 0)\t0.5\n",
+      "  (2, 1)\t0.5\n",
+      "  (2, 14)\t0.5\n",
+      "  (2, 5)\t0.5\n",
+      "  (3, 6)\t0.7071067811865476\n",
+      "  (3, 7)\t0.7071067811865476\n",
+      "  (4, 8)\t0.7071067811865476\n",
+      "  (4, 10)\t0.7071067811865476\n",
+      "  (5, 15)\t0.6117125098631682\n",
+      "  (5, 11)\t0.6117125098631682\n",
+      "  (5, 12)\t0.501613008756558\n",
+      "\n",
+      "tf-idf values in matrix form:\n",
+      "[[0.         0.         0.46262479 0.         0.46262479 0.\n",
+      "  0.         0.         0.         0.46262479 0.         0.\n",
+      "  0.37935895 0.46262479 0.         0.        ]\n",
+      " [0.         0.         0.         1.         0.         0.\n",
+      "  0.         0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.         0.        ]\n",
+      " [0.5        0.5        0.         0.         0.         0.5\n",
+      "  0.         0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.5        0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.\n",
+      "  0.70710678 0.70710678 0.         0.         0.         0.\n",
+      "  0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.70710678 0.         0.70710678 0.\n",
+      "  0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.         0.         0.         0.61171251\n",
+      "  0.50161301 0.         0.         0.61171251]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set default for all parameters in TfidfVectorizer\n",
+    "tfidf = TfidfVectorizer()\n",
+    "\n",
+    "# get tf-df values\n",
+    "tfidf_matrix = tfidf.fit_transform(courses)\n",
+    "# get idf values\n",
+    "print('\\nidf values:')\n",
+    "for ele1, ele2 in zip(tfidf.get_feature_names_out(), tfidf.idf_):\n",
+    "\tprint(ele1, ':', ele2)\n",
+    "\t\n",
+    "# get indexing\n",
+    "print('\\nWord indexes:')\n",
+    "print(tfidf.vocabulary_)\n",
+    "\n",
+    "# display tf-idf values\n",
+    "print('\\ntf-idf value:')\n",
+    "print(tfidf_matrix)\n",
+    "\n",
+    "\n",
+    "# in matrix form\n",
+    "print('\\ntf-idf values in matrix form:')\n",
+    "print(tfidf_matrix.toarray())"
    ]
   },
   {
@@ -263,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
    "id": "72a9699b",
    "metadata": {},
    "outputs": [],
@@ -287,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 112,
    "id": "26016968",
    "metadata": {},
    "outputs": [],
@@ -312,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 114,
    "id": "ddf0d8ab318c7c87",
    "metadata": {
     "ExecuteTime": {
@@ -324,9 +427,32 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.19029138],\n",
+       "       [0.        , 1.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 1.        , 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.        , 1.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 1.        ,\n",
+       "        0.        ],\n",
+       "       [0.19029138, 0.        , 0.        , 0.        , 0.        ,\n",
+       "        1.        ]])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cosine_similarities = linear_kernel(tfidf_matrix)"
+    "cosine_similarities = linear_kernel(tfidf_matrix)\n",
+    "cosine_similarities"
    ]
   },
   {
@@ -713,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
