First, created a list of names and replaced them to people. Second, Took the list of courses and replaced them to the courses in the dataset

--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -652,6 +652,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2fb2fe95",
+   "metadata": {},
+   "source": [
+    "Link the courses in the dataset to the descriptions in the Coursera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "940cbeeb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "3c7f3fe7",
    "metadata": {},
    "source": [
