--- a/test.ipynb
+++ b/test.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,118 +53,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Course</th>\n",
-       "      <th>Score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Build Basic Generative Adversarial Networks (G...</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74</th>\n",
-       "      <td>Water Supply and Sanitation Policy in Developi...</td>\n",
-       "      <td>0.132246</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Business English for Cross-cultural Communication</td>\n",
-       "      <td>0.120705</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A Crash Course in Data Science</td>\n",
-       "      <td>0.117632</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Cancer Prevention Web-Based Activity</td>\n",
-       "      <td>0.113707</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>Legal aspects of conducting business in Russia</td>\n",
-       "      <td>0.110358</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Calculating Descriptive Statistics in R</td>\n",
-       "      <td>0.107863</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>Social Media Management</td>\n",
-       "      <td>0.106924</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Emergency Care: Pregnancy, Infants, and Children</td>\n",
-       "      <td>0.106736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Cryptography and Information Theory</td>\n",
-       "      <td>0.105415</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                               Course     Score\n",
-       "5   Build Basic Generative Adversarial Networks (G...  1.000000\n",
-       "74  Water Supply and Sanitation Policy in Developi...  0.132246\n",
-       "7   Business English for Cross-cultural Communication  0.120705\n",
-       "0                      A Crash Course in Data Science  0.117632\n",
-       "10               Cancer Prevention Web-Based Activity  0.113707\n",
-       "48     Legal aspects of conducting business in Russia  0.110358\n",
-       "9             Calculating Descriptive Statistics in R  0.107863\n",
-       "68                            Social Media Management  0.106924\n",
-       "25   Emergency Care: Pregnancy, Infants, and Children  0.106736\n",
-       "14                Cryptography and Information Theory  0.105415"
+       "80"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rec = get_recommendations('Martha Long', i_data, ui_data, 10)[0]\n",
-    "rec = rec.sort_values(by=['Score'], ascending=False)\n",
-    "rec = rec.head(10)\n",
-    "rec"
+    "courses = ui_data['course']\n",
+    "len(courses.drop_duplicates())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -190,11 +100,6 @@
        "      <th></th>\n",
        "      <th>Course</th>\n",
        "      <th>Score</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Index</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -224,58 +129,76 @@
        "      <td>0.232154</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Calculating Descriptive Statistics in R</td>\n",
-       "      <td>0.223742</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>Foundations of Public Health Practice: The Pub...</td>\n",
-       "      <td>0.217645</td>\n",
+       "      <th>15</th>\n",
+       "      <td>Culminating Project in Health Informatics</td>\n",
+       "      <td>0.087728</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>Introduction to Supply Chain Finance &amp; Blockch...</td>\n",
-       "      <td>0.217531</td>\n",
+       "      <th>27</th>\n",
+       "      <td>Everyday Excel, Part 2</td>\n",
+       "      <td>0.087400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Disease Screening in Public Health</td>\n",
-       "      <td>0.216949</td>\n",
+       "      <th>11</th>\n",
+       "      <td>Coaching Practices</td>\n",
+       "      <td>0.076856</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Discrete Mathematics</td>\n",
-       "      <td>0.212680</td>\n",
+       "      <th>78</th>\n",
+       "      <td>Wireshark for Basic Network Security Analysis</td>\n",
+       "      <td>0.062450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Fundamental Neuroscience for Neuroimaging</td>\n",
+       "      <td>0.057852</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>77 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                  Course     Score\n",
-       "Index                                                             \n",
-       "42                    Introduction to English Common Law  0.477360\n",
-       "55            Oral Communication for Engineering Leaders  0.334615\n",
-       "26                     Environmental Management & Ethics  0.293256\n",
-       "0                         A Crash Course in Data Science  0.239388\n",
-       "7      Business English for Cross-cultural Communication  0.232154\n",
-       "9                Calculating Descriptive Statistics in R  0.223742\n",
-       "32     Foundations of Public Health Practice: The Pub...  0.217645\n",
-       "45     Introduction to Supply Chain Finance & Blockch...  0.217531\n",
-       "21                    Disease Screening in Public Health  0.216949\n",
-       "20                                  Discrete Mathematics  0.212680"
+       "                                               Course     Score\n",
+       "42                 Introduction to English Common Law  0.477360\n",
+       "55         Oral Communication for Engineering Leaders  0.334615\n",
+       "26                  Environmental Management & Ethics  0.293256\n",
+       "0                      A Crash Course in Data Science  0.239388\n",
+       "7   Business English for Cross-cultural Communication  0.232154\n",
+       "..                                                ...       ...\n",
+       "15          Culminating Project in Health Informatics  0.087728\n",
+       "27                             Everyday Excel, Part 2  0.087400\n",
+       "11                                 Coaching Practices  0.076856\n",
+       "78      Wireshark for Basic Network Security Analysis  0.062450\n",
+       "34          Fundamental Neuroscience for Neuroimaging  0.057852\n",
+       "\n",
+       "[77 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from src.isne_recommendation.TfidfLinearKernel_old import get_recommendations\n",
+    "rec = get_recommendations('Martha Long', i_data, ui_data, 80)\n",
+    "rec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from src.isne_recommendation.TfidfLinearKernel_old import get_recommendations\n",
     "\n",
-    "get_recommendations('Martha Long', i_data, ui_data, 10)"
+    "# get_recommendations('Martha Long', i_data, ui_data, 10)"
    ]
   }
  ],
