tfidf and knn finished

--- a/test.ipynb
+++ b/test.ipynb
@@ -13,9 +13,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics.pairwise import linear_kernel\n",
     "import pandas as pd\n",
-    "from isne_recommendation import TfidfLinearKernel, FeatureRatingsKNN, Hybrid\n",
-    "from sklearn.model_selection import train_test_split"
+    "import numpy as np"
    ]
   },
   {
@@ -53,28 +57,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "80"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "courses = ui_data['course']\n",
-    "len(courses.drop_duplicates())"
+    "# Assuming your dataset is stored in a pandas DataFrame called 'ui_data'\n",
+    "# and 'username' is the column containing names of users, 'course' is the column containing course name\n",
+    "\n",
+    "# Calculate the number of courses each user has taken\n",
+    "courses_per_user = ui_data.groupby('username')['course'].count().reset_index()\n",
+    "courses_per_user.columns = ['username', 'course_count']\n",
+    "\n",
+    "# Merge the courses_per_user DataFrame back to the original DataFrame\n",
+    "merged_user_courses = ui_data.merge(courses_per_user, on='username')\n",
+    "\n",
+    "# Sort the DataFrame by username and course to ensure consistent train-test split\n",
+    "user_courses = merged_user_courses.sort_values(by=['username', 'course'])\n",
+    "\n",
+    "# Initialize a counter variable to keep track of the number of courses for each user\n",
+    "course_counter = 1\n",
+    "\n",
+    "# Create a list to store the split information (True for training, False for testing)\n",
+    "split_list = []\n",
+    "\n",
+    "# Iterate through each row to determine the split\n",
+    "for index, row in user_courses.iterrows():\n",
+    "    if course_counter < row['course_count']:\n",
+    "        split_list.append(True)  # Training data\n",
+    "    else:\n",
+    "        split_list.append(False)  # Testing data\n",
+    "        course_counter = 1  # Reset the counter for the next user\n",
+    "    course_counter += 1\n",
+    "\n",
+    "# Add the split information to the DataFrame\n",
+    "user_courses['split'] = split_list\n",
+    "\n",
+    "# Split the DataFrame into training and testing sets based on the 'split' column\n",
+    "train_ui_data = user_courses[user_courses['split']]\n",
+    "test_ui_data = user_courses[~user_courses['split']]\n",
+    "\n",
+    "# Drop the auxiliary columns used for splitting\n",
+    "train_ui_data = train_ui_data.drop(['course_count', 'split'], axis=1)\n",
+    "test_ui_data = test_ui_data.drop(['course_count', 'split'], axis=1)\n",
+    "\n",
+    "# Now train_ui_data contains rows where users learned n - 1 courses for training,\n",
+    "# and test_ui_data contains rows where users learned course n for testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Recall @K"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -104,101 +143,81 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>Introduction to English Common Law</td>\n",
-       "      <td>0.477360</td>\n",
+       "      <th>5</th>\n",
+       "      <td>Build Basic Generative Adversarial Networks (G...</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>Oral Communication for Engineering Leaders</td>\n",
-       "      <td>0.334615</td>\n",
+       "      <th>54</th>\n",
+       "      <td>Non-Equilibrium Applications of Statistical Th...</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Environmental Management &amp; Ethics</td>\n",
-       "      <td>0.293256</td>\n",
+       "      <th>56</th>\n",
+       "      <td>Physics of silicon solar cells</td>\n",
+       "      <td>0.210851</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A Crash Course in Data Science</td>\n",
-       "      <td>0.239388</td>\n",
+       "      <th>52</th>\n",
+       "      <td>Medical Applications of Particle Accelerators ...</td>\n",
+       "      <td>0.185854</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Business English for Cross-cultural Communication</td>\n",
-       "      <td>0.232154</td>\n",
+       "      <th>31</th>\n",
+       "      <td>Foundations of Public Health Practice: Behavio...</td>\n",
+       "      <td>0.175814</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>62</th>\n",
+       "      <td>Python and Machine Learning for Asset Management</td>\n",
+       "      <td>0.170540</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Culminating Project in Health Informatics</td>\n",
-       "      <td>0.087728</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Biomedical Visualisation</td>\n",
+       "      <td>0.169872</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Everyday Excel, Part 2</td>\n",
-       "      <td>0.087400</td>\n",
+       "      <th>43</th>\n",
+       "      <td>Introduction to International Criminal Law</td>\n",
+       "      <td>0.163321</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Coaching Practices</td>\n",
-       "      <td>0.076856</td>\n",
+       "      <th>57</th>\n",
+       "      <td>Political Governance and Public Policy in Russia</td>\n",
+       "      <td>0.154583</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>Wireshark for Basic Network Security Analysis</td>\n",
-       "      <td>0.062450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>Fundamental Neuroscience for Neuroimaging</td>\n",
-       "      <td>0.057852</td>\n",
+       "      <th>21</th>\n",
+       "      <td>Disease Screening in Public Health</td>\n",
+       "      <td>0.152959</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>77 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                               Course     Score\n",
-       "42                 Introduction to English Common Law  0.477360\n",
-       "55         Oral Communication for Engineering Leaders  0.334615\n",
-       "26                  Environmental Management & Ethics  0.293256\n",
-       "0                      A Crash Course in Data Science  0.239388\n",
-       "7   Business English for Cross-cultural Communication  0.232154\n",
-       "..                                                ...       ...\n",
-       "15          Culminating Project in Health Informatics  0.087728\n",
-       "27                             Everyday Excel, Part 2  0.087400\n",
-       "11                                 Coaching Practices  0.076856\n",
-       "78      Wireshark for Basic Network Security Analysis  0.062450\n",
-       "34          Fundamental Neuroscience for Neuroimaging  0.057852\n",
-       "\n",
-       "[77 rows x 2 columns]"
+       "5   Build Basic Generative Adversarial Networks (G...  1.000000\n",
+       "54  Non-Equilibrium Applications of Statistical Th...  1.000000\n",
+       "56                     Physics of silicon solar cells  0.210851\n",
+       "52  Medical Applications of Particle Accelerators ...  0.185854\n",
+       "31  Foundations of Public Health Practice: Behavio...  0.175814\n",
+       "62   Python and Machine Learning for Asset Management  0.170540\n",
+       "3                            Biomedical Visualisation  0.169872\n",
+       "43         Introduction to International Criminal Law  0.163321\n",
+       "57   Political Governance and Public Policy in Russia  0.154583\n",
+       "21                 Disease Screening in Public Health  0.152959"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rec = get_recommendations('Martha Long', i_data, ui_data, 80)\n",
-    "rec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from src.isne_recommendation.TfidfLinearKernel_old import get_recommendations\n",
-    "\n",
-    "# get_recommendations('Martha Long', i_data, ui_data, 10)"
+    "recommendations = get_recommendations('Martha Long', i_data, train_ui_data, 10)\n",
+    "recommendations"
    ]
   }
  ],
